# ai-media-generator

./: .gitignore  README.md  package.json  pnpm-lock.yaml
.github/workflows/: ai-media-release.yml
cli/genmedia/: Cargo.toml  README.md
cli/genmedia/src/: client.rs  config.rs  main.rs  request_params.rs  types.rs
cli/genmedia/src/commands/: config.rs  image.rs  mod.rs  models.rs  task.rs  video.rs
docs/plans/: 2026-03-22-ai-media-generator-v0.1.1-release.md  2026-03-22-ai-media-generator-v0.1.2-release.md  2026-03-22-cli-parameter-passthrough.md  2026-03-22-open-source-onboarding-and-skill.md  2026-03-22-skill-seo-split.md
scripts/cli/: README.md  build-ai-media-release.ts  publish-ai-media-npm.ts  publish-ai-media-pypi.sh  release-lib.ts
skills/ai-image-generation/: SKILL.md
skills/ai-media-cli/: SKILL.md
skills/ai-media-cli/references/: cli-commands.md  platform-onboarding.md
skills/ai-video-generation/: SKILL.md
skills/flux-image-generator/: SKILL.md
skills/image-to-image/: SKILL.md
skills/image-to-video/: SKILL.md
skills/nano-banana-image-generator/: SKILL.md
skills/seedance-video-generator/: SKILL.md
skills/sora2-video-generator/: SKILL.md
skills/text-to-image/: SKILL.md
skills/text-to-video/: SKILL.md
skills/veo-video-generator/: SKILL.md
