[package]
name = "ai-media-generator"
version = "0.1.0"
edition = "2024"
description = "AI image and video generation package for the ai-media CLI"
license = "MIT"
readme = "README.md"
repository = "https://github.com/214140846/ai-media-generator"
homepage = "https://ricebowl.ai"
keywords = ["cli", "ai", "image-generation", "video-generation"]
categories = ["command-line-utilities"]

[[bin]]
name = "ai-media"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
dirs = "6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
